feat: last shlifs made on overleaf

--- a/main.tex
+++ b/main.tex
@@ -24,12 +24,12 @@
 %------------------
 \instytut{Telekomunikacji}
 \kierunek{Telekomunikacja}
-\specjalnosc{Teleinformatyka i Zarządzanie w Telekomunikacji}
+\specjalnosc{Teleinformatyka i cyberbezpieczeństwo}
 \title{
-    Propozycja architektury platformy do modelowania i uruchamiania zamkniętych pętli sterowania w Kubernetes
+    Modelowanie złożonych pętli sterowania w środowisku Kubernetes
 }
 \engtitle{
-    Creation of a platform for designing and running closed control loops in Kubernetes
+    Modelling complex control loops in Kubernetes environment
 }
 \author{Andrzej Gawor}
 \album{300528}
@@ -48,7 +48,7 @@
 %----------------------------------------
 % Streszczenie po angielsku
 %----------------------------------------
-\clearpage
+\cleardoublepage
 \secondabstract
 \input{tex/abstract/eng.tex}
 \secondkeywords Closed Control Loops, Kubernetes, Managing Telco-Networks, Automation, Go, Open5GS, Microservices
