--- a/tex/1-wstep/1-przedmowa.tex
+++ b/tex/1-wstep/1-przedmowa.tex
@@ -6,4 +6,4 @@ W tym celu ETSI (European Telecommunications Standards Institute) powołało dwa
 
 Pętlą sterowania ETSI nazywa mechanizm, który monitoruje wydajność systemu lub procesu poddawanego kontroli w celu osiągnięcia pożądanego zachowania. Innymi słowy, pętla sterowania reguluje działanie zarządzanego obiektu. Pętle sterowania można podzielić na zamknięte lub otwarte, w zależności od tego, czy działanie sterujące zależy od sprzężenia zwrotnego z kontrolowanego obiektu. Jeśli tak, pętle nazywamy zamkniętą, jeśli nie - otwartą. 
 
-W przypadku architektur ETSI, zamknięta pętla sterowania służy jako model organizacji przepływu pracy (ang. \hyperlink{def:workflow}{\textit{workflow}}) elementów odpowiedzialnych za sztuczną inteligencję. Obie architektury referencyjne opisują modelowanie, uruchamianie oraz zarządzanie zamkniętymi pętlami sterowania w celu osiągania celów zarządzania. Jednak wciąż brakuje ogólnodostępnej platformy, która pozwalałaby operatorom w praktyce projektować, wdrażać i zarządzać takimi pętlami sterowania zgodnie z założeniami ETSI ZSM i ENI, co stanowi istotną lukę technologiczną. Naturalnym następnym krokiem jest zaproponowanie architektury platformy, która umożliwia takie działania oraz wpisuje się w aktualne trendy systemów teleinformatycznych, takich jak podejście cloud-native, wykorzystanie mikrousług oraz integracja z ekosystemem Kubernetes.
+W przypadku architektur ETSI, zamknięta pętla sterowania służy jako model organizacji przepływu pracy (ang. \hyperlink{def:workflow}{\textit{workflow}}) elementów odpowiedzialnych za sztuczną inteligencję. Obie architektury referencyjne opisują modelowanie, uruchamianie oraz zarządzanie zamkniętymi pętlami sterowania w celu osiągania celów zarządzania. Jednak wciąż brakuje ogólnodostępnej platformy, która pozwalałaby operatorom w praktyce projektować, wdrażać i zarządzać takimi pętlami sterowania, co stanowi istotną lukę technologiczną. 
