--- a/tex/1-wstep/2-cel-i-zakres-pracy.tex
+++ b/tex/1-wstep/2-cel-i-zakres-pracy.tex
@@ -1,6 +1,9 @@
 \subsection{Cel i zakres pracy}
 
-Celem pracy jest kontynuacja badań ETSI, polegająca na zaproponowaniu \hyperlink{def:architektura}{\textit{architektury}} platformy, na której możliwe będzie modelowanie, uruchamianie oraz zarządzanie zamkniętymi pętlami sterowania. Niniejsza praca nie koncentruje się na aspektach związanych ze sztuczną inteligencją. Platforma ma jedynie służyć do modelowania, uruchamiania i zarządzania przepływem pracy pętli (ang. \hyperlink{def:workflow}{\textit{workflow}}), ale sama nie stanowi środowiska wykonawczego dla jej komponentów.
+Celem pracy jest zaproponowanie \hyperlink{def:architektura}{\textit{architektury}} platformy, za pomocą której możliwe jest modelowanie, uruchamianie oraz zarządzanie pętlami sterowania. 
 
-W zakres pracy wchodzi: przegląd powiązanej literatury, sformułowanie wymagań dla platformy, opracowanie jej architektury, implementacja PoC (ang. \textit{Proof of Concept}), przeprowadzenie testów oraz analiza potencjału platformy w kontekście dalszego rozwoju. Po publikacji praca może stanowić podstawę do implementacji \hyperlink{def:kognitywny-system-zarzadzania-siecia}{Kognitywnych Systemów Zarządzania Siecią}, zgodnych ze specyfikacjami ETSI.
+Platforma, bazując na wbudowanych mechanizmach warstwy sterowania Kubernetes, umożliwia użytkownikowi modelowanie złożonych scenariuszy sterowania w formie pętli. Logika bloków funkcjonalnych zawartych w scenariuszach może być wyniesiona do specjalizowanych aplikacji. Platforma integruje te bloki w spójny przepływ pracy (ang. \textit{workflow}), jednocześnie umożliwiając modularność pętli - horyzontalnie, poprzez mechanizmy zasobów własnych (ang. \textit{Custom Resources}) i komunikacji między nimi (modyfikacje atrybutów i rekoncyliacja operatorów) oraz wertykalnie, dzięki wprowadzonym mechanizmom komunikacji i przetwarzania, realizowanym za pomocą opracowanej składni.  W tym też kontekście niniejsza praca nie koncentruje się na aspektach związanych ze sztuczną inteligencją. Opracowana platforma ma służyć do modelowania, uruchamiania i zarządzania przepływem pracy (ang. workflow) w złożonych pętlach sterowania, ale sama nie stanowi środowiska wykonawczego dla jej zaawansowanych komponentów (np. silników polityk czy narzędzi AI/ML).
 
+W zakres pracy wchodzi: podsumowanie stanu wiedzy, Rozdział 2, sformułowanie wymagań dla platformy, opracowanie jej architektury, Rozdział 3, implementacja PoC (ang. \textit{Proof of Concept}), Rozdział 4, przeprowadzenie testów, Rozdział 5, analiza potencjału platformy w kontekście dalszego rozwoju, Rozdział 6.
+
+Po publikacji praca może stanowić podstawę do implementacji jednego z modułów \hyperlink{def:kognitywny-system-zarzadzania-siecia}{Kognitywnych i Autnomicznych  Systemów Zarządzania Siecią} specyfikowanych przez ETSI.
