--- a/tex/1-wstep/main.tex
+++ b/tex/1-wstep/main.tex
@@ -2,4 +2,4 @@
 \section{Wstęp}
 \input{tex/1-wstep/1-przedmowa.tex}
 \input{tex/1-wstep/2-cel-i-zakres-pracy.tex}
-\input{tex/1-wstep/3-struktura-dokumentu.tex}
+%\input{tex/1-wstep/3-struktura-dokumentu.tex}
