--- a/tex/3-architektura/4-instrukcja-uzycia.tex
+++ b/tex/3-architektura/4-instrukcja-uzycia.tex
@@ -16,7 +16,7 @@ Podjęcie przez użytkownika takich akcji nazywamy pojedynczym \hyperlink{def:wd
 
 \subsubsection{Instalacja Lupus}
 
-\hyperlink{def:lupus}{\textbf{Lupus}} jest zaimplementowany jako \textit{Zasoby Własne} (ang. \textit{Custom Resources}) w Kubernetes. Instalacja polega na zainstalowaniu tych zasobów w swoim klastrze. 
+\hyperlink{def:lupus}{\textbf{Lupus}} jest zaimplementowany jako zasoby własne (ang. \textit{Custom Resources}) w Kubernetes. Instalacja polega na zainstalowaniu tych zasobów w swoim klastrze. 
 
 Pełna dokumentacja tego procesu znajduje się w \hyperref[appendix:2]{Załączniku 2}.
 
