--- a/tex/4-implementacja/3-decyzje.tex
+++ b/tex/4-implementacja/3-decyzje.tex
@@ -1,6 +1,6 @@
 \subsection{Decyzje podjęte podczas implementacji}
 
-\subsubsection{Wstęp}
+%\subsubsection{Wstęp}
 
 Podczas realizacji projektu zbadano różne podejścia i rozwiązano liczne problemy implementacyjne, aby wdrożyć architekturę opisaną w rozdziale trzecim. Każdy podrozdział omawia po jednym z aspektów – od wymagań do implementacji.
 
