--- a/tex/abstract/pl.tex
+++ b/tex/abstract/pl.tex
@@ -1,5 +1,5 @@
-Projekt opisany w niniejszej pracy skupia się na zaproponowaniu oraz przedstawieniu implementacji architektury platformy, która pozwala na modelowanie oraz uruchamianie zamkniętych pętli sterowania w Kubernetes. Genezą projektów jest praca komitetów standaryzacyjnych takich jak ETSI ZSM czy ETSI ENI, które skupiają się na specyfikacji autonomicznych oraz kognitywnych systemów zarządzania sieciami telekomunikacyjnymi. Architektury specyfikowanych systemów opierają się na zamkniętych pętlach sterowania
+Niniejszy projekt jest poświęcony opracowaniu architektury i implementacji platformy, która pozwala na modelowanie, uruchamianie oraz zarządzanie zamkniętymi pętlami sterowania w Kubernetes. Tematyka pracy jest powiązana z wynikami prac standaryzacyjnych komitetów ETSI ZSM czy ETSI ENI, które skupiają się na specyfikacji autonomicznych oraz kognitywnych systemów zarządzania sieciami telekomunikacyjnymi. 
 
-Naturalnym następnym krokiem jest zaproponowanie platformy, na której operator mógłby takie pętle projektować oraz uruchamiać. W tym celu zdefiniowano zestaw wymagań oraz założeń dla takiego systemu. Jako środowisko uruchomieniowe wybrano Kubernetes. Następnie przeprowadzono obszerną analizę jak za pomocą mechanizmów rozszerzania Kubernetes takich jak "Custom Resources" oraz "Operator Pattern" można stworzyć framework umożliwiający modelowanie zamkniętych pętli sterowania. Na tej podstawie wypracowano bardzo elastyczną architekturą, którą następnie zaimplementowano z użyciem środowiska Kubebuilder. Na koniec wykonano test platformy za pomocą emulatora sieci 5G w postaci Open5GS w połączeniu z UERANSIM. 
+W tym też kontekście w pracy skupiono się na wdrożeniowym aspekcie takich systemów proponując rozwiązanie pozwalające na swobodne definiowanie architektury autonomicznej pętli, otwarte na integrację z zewnętrznymi silnikami polityk i aplikacjami analitycznymi w celu osadzenia w pętli wymaganej logiki decyzyjnej oraz bazującej na mechanizmach implementacyjnych dostępnych w środowisku Kubernetes.
 
-Praca opisuje przegląd powiązanej literatury, powstałą platformę, jej architekturę oraz instrukcję jej użytkowania. Omówiona została również przykładowa implementacja platformy, technologie za nią stojące oraz decyzje podjęte podczas jej powstawania. Finalnie przedstawiono również test działania platformy w praktyce. Pracę podsumowuje lista wniosków oraz potencjalnych dróg rozwoju platformy. 
+W pracy opisano przegląd powiązanej literatury, powstałą platformę, jej architekturę oraz instrukcję użytkowania. Omówiona została przykładowa implementacja platformy, technologie za nią stojące oraz decyzje podjęte podczas jej powstawania. Finalnie przedstawiono również test działania platformy w praktyce. Pracę podsumowuje lista wniosków oraz potencjalnych dróg rozwoju platformy. 
