--- a/tex/appendix/1-definicje.tex
+++ b/tex/appendix/1-definicje.tex
@@ -63,7 +63,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 \acronym{Kod LupN (ang. \textit{LupN code})}{Kod wyrażający notację LupN. Zbiór obiektów LupN zapisanych w YAML. Zapisany jest w pliku LupN.}
 
 \hypertarget{def:logika-petli}{}
-\acronym{Logika Pętli (ang. \textit{Loop logic})}{Kroki, które muszą zostać wykonane, aby w każdej iteracji pętli przybliżyć Stan Aktualny do Stanu Pożądanego. Instrukcje określające, jak na podstawie reprezentacji Stanu Aktualnego ma zostać \textit{wywnioskowana} Akcja Sterująca.}
+\acronym{Logika Pętli (ang. \textit{Loop logic})}{Kroki, które muszą zostać wykonane, aby w każdej iteracji pętli przybliżyć Stan Aktualny do Stanu Pożądanego. Instrukcje określające, jak na podstawie reprezentacji Stanu Aktualnego ma zostać \textit{wywnioskowana} Akcja Sterująca}. Na logikę pętli składa się orkiestracja pracy jej elementów oraz wykonywane przez nie przetwarzanie (tzw. \hyperlink{def:czesc-obliczeniowa}{część obliczeniowa}.
 
 \hypertarget{def:lupn}{}
 \acronym{LupN (ang. \textit{LupN})}{Notacja do wyrażania workflow pętli za pomocą obiektów LupN. Zapisywana w pliku LupN.}
