--- a/tex/appendix/10-test-lupn.tex
+++ b/tex/appendix/10-test-lupn.tex
@@ -1,4 +1,4 @@
-\appendix{Kod LupN}\hypertarget{appendix:10}{}
+\appendix{Kod LupN (model danych pętli sterowania)}\hypertarget{appendix:10}{}
 
 Kod w wersji elektronicznej znajduje się pod linkiem: \url{https://github.com/0x41gawor/lupus/blob/master/examples/open5gs/sample-loop/master.yaml}
 
