--- a/tex/appendix/6-akcje.tex
+++ b/tex/appendix/6-akcje.tex
@@ -78,5 +78,5 @@ Każdy przykład zawiera:
 \subsubsection{Insert}
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{a6-insert.png}
-    \caption{Przykład modyfikacji danych przez akcje Insert. Źródło: Opracowanie własne.}\label{fig:a6-duplicate}
+    \caption{Przykład modyfikacji danych przez akcje Insert. Źródło: Opracowanie własne.}\label{fig:a6-insert}
 \end{figure}
