--- a/tex/util/acronym-list.tex
+++ b/tex/util/acronym-list.tex
@@ -4,7 +4,10 @@
 \hypertarget{def:architektura}{}
 \acronym{Architektura}{Zbiór reguł i metod opisujących funkcjonalność, organizację oraz implementację systemu.}
 
-\hypertarget{def:dane}{}
+\hypertarget{def:cladra}{}
+\acronym{CLADRA}{Closed Loop Anomaly Detection and Resolution Automation}
+
+\hypertarget{def:danae}{}
 \acronym{Dane}{Fakty oraz statystyk zebrane razem w celu analizy. Stanowią podstawę do wydobycia z ich \hyperlink{def:informacja}{Informacji}}
 
 \hypertarget{def:custom-resource-definitions}{}
