--- a/tex/2-stan-wiedzy/main.tex
+++ b/tex/2-stan-wiedzy/main.tex
@@ -1,6 +1,6 @@
 \clearpage
 \section{Stan wiedzy}
 \input{tex/2-stan-wiedzy/1-wstep.tex}
-\input{tex/2-stan-wiedzy/2-historia.tex}
+%\input{tex/2-stan-wiedzy/2-historia.tex}
 \input{tex/2-stan-wiedzy/4-przeglad.tex}
 \input{tex/2-stan-wiedzy/5-przeglad.tex}
