--- a/tex/3-architektura/main.tex
+++ b/tex/3-architektura/main.tex
@@ -1,5 +1,5 @@
 \clearpage
-\section{Architektura}
+\section{Architektura rozwiązania}
 
 \input{tex/3-architektura/1-wstep.tex}
 \input{tex/3-architektura/2-wymagania-i-zalozenia.tex}
