--- a/tex/abstract/eng.tex
+++ b/tex/abstract/eng.tex
@@ -1,5 +1,5 @@
-The project described in this work focuses on proposing and presenting the implementation of a platform architecture that enables the modeling and execution of closed control loops in Kubernetes. The genesis of the project stems from the work of standardization committees such as ETSI ZSM and ETSI ENI, which focus on specifying autonomous and cognitive management systems for telecommunication networks. The architectures of these specified systems are based on closed control loops.
+This project is dedicated to the development of the architecture and implementation of a platform that enables the modeling, execution, and management of closed control loops in Kubernetes. The subject of this work is related to the standardization efforts of ETSI ZSM and ETSI ENI committees, which focus on specifying autonomous and cognitive management systems for telecommunication networks.
 
-A natural next step is to propose a platform where an operator could design and execute such loops. To this end, a set of requirements and assumptions for such a system has been defined. Kubernetes was chosen as the runtime environment. Subsequently, an extensive analysis was conducted on how Kubernetes extension mechanisms, such as "Custom Resources" and the "Operator Pattern," can be leveraged to create a framework that enables the modeling of closed control loops. Based on this analysis, a highly flexible architecture was developed and then implemented using the Kubebuilder framework. Finally, the platform was tested using a 5G network emulator, specifically Open5GS combined with UERANSIM.
+In this context, the study emphasizes the implementation aspects of such systems by proposing a solution that allows for flexible definition of the architecture of an autonomous loop, open to integration with external policy engines and analytical applications. This integration facilitates embedding the required decision-making logic within the loop while leveraging implementation mechanisms available in the Kubernetes environment.
 
-This work describes a review of related literature, the developed platform, its architecture, and a user guide. It also discusses an exemplary implementation of the platform, the technologies behind it, and the decisions made during its development. Finally, a practical test of the platform's functionality is presented. The work concludes with a summary of findings and potential future development paths for the platform.
+The thesis presents a review of related literature, the developed platform, its architecture, and user instructions. A reference implementation of the platform, the underlying technologies, and key decisions made during its development are discussed. Finally, a practical test of the platform's functionality is presented. The study concludes with a summary of findings and potential future development directions for the platform.
